[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_blast"
version = "0.0.1"
authors = [
    { name = "Andrew Tapia", email = "andrew.tapia@uky.edu" }
]
description =  "A library for accessing BioProject, BioSample, and SRA objects."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "lxml",
    "requests"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/actapia/sra_utils"
"Bug Tracker" = "https://github.com/actapia/sra_utils"